# opt-control

./: CMakeLists.txt  package.xml
src/: test_newton_equality_minimize.cpp  test_newton_find_root.cpp  test_newton_minimize.cpp  test_newton_opt.cpp
